update vela init UI
Signed-off-by: 天元 <jianbo.sjb@alibaba-inc.com>

--- a/charts/vela-core/templates/defwithtemplate/task.yaml
+++ b/charts/vela-core/templates/defwithtemplate/task.yaml
@@ -34,7 +34,7 @@ spec:
       	// +short=c
       	count: *1 | int
       
-      	// +usage=specify app image
+      	// +usage=Which image would you like to use for your service
       	// +short=i
       	image: string
       
