--- a/pkg/plugins/testdata/websvcWorkloadDef.yaml
+++ b/pkg/plugins/testdata/websvcWorkloadDef.yaml
@@ -28,11 +28,11 @@ spec:
         }
       }
       parameter: {
-        // +usage=specify app image
+        // +usage=Which image would you like to use for your service
         // +short=i
         image: string
 
-        // +usage=specify port for container
+        // +usage=Which port do you want customer traffic sent to
         // +short=p
         port:  *6379 | int
         
