vela up support url, fix scale/rollout/metrics to focus on appfile, fix reference doc
Signed-off-by: Hongchao Deng <hongchaodeng1@gmail.com>

--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -7,6 +7,7 @@ on:
     branches: [master]
     paths-ignore:
     - 'docs/**'
+    - 'resources/**'
 defaults:
   run:
     working-directory: ./dashboard
