--- a/pkg/plugins/testdata/websvcWorkloadDef.yaml
+++ b/pkg/plugins/testdata/websvcWorkloadDef.yaml
@@ -6,7 +6,7 @@ metadata:
     usecase: forplugintest
 spec:
   definitionRef:
-    name: webservice.testapps
+    name: deployments.apps
   extension:
     template: |
       output: {
