--- a/charts/vela-core/templates/velaConfig.yaml
+++ b/charts/vela-core/templates/velaConfig.yaml
@@ -2,7 +2,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: vela-config
-  namespace: {{ .Release.Namespace }}
+  # TODO: Currently namespace MUST be vela-system
+  namespace: vela-system
 data:
   servicemonitors.monitoring.coreos.com: |
     {
