--- a/charts/vela-core/crds/standard.oam.dev_podspecworkloads.yaml
+++ b/charts/vela-core/crds/standard.oam.dev_podspecworkloads.yaml
@@ -1230,6 +1230,7 @@ spec:
                                   can be referred to by services.
                                 type: string
                               protocol:
+                                default: TCP
                                 description: Protocol for port. Must be UDP, TCP,
                                   or SCTP. Defaults to "TCP".
                                 type: string
@@ -2364,6 +2365,7 @@ spec:
                                   can be referred to by services.
                                 type: string
                               protocol:
+                                default: TCP
                                 description: Protocol for port. Must be UDP, TCP,
                                   or SCTP. Defaults to "TCP".
                                 type: string
@@ -3503,6 +3505,7 @@ spec:
                                   can be referred to by services.
                                 type: string
                               protocol:
+                                default: TCP
                                 description: Protocol for port. Must be UDP, TCP,
                                   or SCTP. Defaults to "TCP".
                                 type: string
