--- a/charts/vela-core/templates/defwithtemplate/route.yaml
+++ b/charts/vela-core/templates/defwithtemplate/route.yaml
@@ -3,11 +3,10 @@ kind: TraitDefinition
 metadata:
   name: route
   annotations:
-    definition.oam.dev/description: "Add a route for workload"
+    definition.oam.dev/description: "Configure route policy to the app"
 spec:
   appliesToWorkloads:
     - webservice
-    - deployments.apps
   workloadRefPath: spec.workloadRef
   definitionRef:
     name: routes.standard.oam.dev
