--- a/charts/vela-core/templates/defwithtemplate/webservice.yaml
+++ b/charts/vela-core/templates/defwithtemplate/webservice.yaml
@@ -3,7 +3,7 @@ kind: WorkloadDefinition
 metadata:
   name: webservice
   annotations:
-    definition.oam.dev/description: "Long running service with network routes"
+    definition.oam.dev/description: "Long-running scalable service with stable endpoint to receive external traffic"
 spec:
   definitionRef:
     name: deployments.apps
