--- a/charts/vela-core/templates/defwithtemplate/worker.yaml
+++ b/charts/vela-core/templates/defwithtemplate/worker.yaml
@@ -3,7 +3,7 @@ kind: WorkloadDefinition
 metadata:
   name: worker
   annotations:
-    definition.oam.dev/description: "Backend worker without ports exposed"
+    definition.oam.dev/description: "Long-running scalable backend worker without network endpoint"
 spec:
   definitionRef:
     name: deployments.apps
