--- a/charts/vela-core/templates/defwithtemplate/manualscale.yaml
+++ b/charts/vela-core/templates/defwithtemplate/manualscale.yaml
@@ -17,11 +17,11 @@ spec:
       	apiVersion: "core.oam.dev/v1alpha2"
       	kind:       "ManualScalerTrait"
       	spec: {
-      		replicaCount: parameter.replica
+      		replicaCount: parameter.replicas
       	}
       }
       parameter: {
       	//+short=r
-      	replica: *1 | int
+      	replicas: *1 | int
       }
       
