--- a/pkg/plugins/testdata/manualscalars.yaml
+++ b/pkg/plugins/testdata/manualscalars.yaml
@@ -16,10 +16,10 @@ spec:
       	apiVersion: "core.oam.dev/v1alpha2"
       	kind:       "ManualScalerTrait"
       	spec: {
-      		replicaCount: parameter.replica
+      		replicaCount: parameter.replicas
       	}
       }
       parameter: {
       	//+short=r
-      	replica: *2 | int
+      	replicas: *2 | int
       }
