--- a/charts/vela-core/templates/defwithtemplate/metrics.yaml
+++ b/charts/vela-core/templates/defwithtemplate/metrics.yaml
@@ -1,7 +1,7 @@
 apiVersion: core.oam.dev/v1alpha2
 kind: TraitDefinition
 metadata:
-  name: metric
+  name: metrics
   annotations:
     definition.oam.dev/description: "Configure metrics targets to be monitored for the app"
 spec:
@@ -25,7 +25,7 @@ spec:
       	// +usage=format of the metrics, default as prometheus
       	// +short=f
       	format: *"prometheus" | string
-      	// +usage= the metric path of the service
+      	// +usage= the metrics path of the service
       	path:    *"/metrics" | string
       	scheme:  *"http" | string
       	enabled: *true | bool
