--- a/hack/vela-templates/definitions/metrics.yaml
+++ b/hack/vela-templates/definitions/metrics.yaml
@@ -1,7 +1,7 @@
 apiVersion: core.oam.dev/v1alpha2
 kind: TraitDefinition
 metadata:
-  name: metric
+  name: metrics
   annotations:
     definition.oam.dev/description: "Configure metrics targets to be monitored for the app"
 spec:
