Minor updates on webservice/autoscale docs/comments
based on the comments https://github.com/oam-dev/kubevela/pull/566#discussion_r522385511
and https://github.com/oam-dev/kubevela/issues/585#issuecomment-726253432,
update docs and comments on webservice and autoscale

--- a/charts/vela-core/templates/defwithtemplate/autoscale.yaml
+++ b/charts/vela-core/templates/defwithtemplate/autoscale.yaml
@@ -38,6 +38,7 @@ spec:
       	condition: {
       		type: "Utilization"
       		if parameter["cpuPercent"] != _|_ {
+      			// Temporarily use `strconv` for type converting. This bug will be fixed in kubevela#585
       			value: strconv.FormatInt(parameter.cpuPercent, 10)
       		}
       	}
