--- a/charts/vela-core/templates/defwithtemplate/webservice.yaml
+++ b/charts/vela-core/templates/defwithtemplate/webservice.yaml
@@ -36,12 +36,7 @@ spec:
       					}
       
       					if context["config"] != _|_ {
-      						env: [
-      							for k, v in context.config {
-      								name:  k
-      								value: v
-      							},
-      						]
+      						env: context.config
       					}
       
       					ports: [{
