--- a/.golangci.yml
+++ b/.golangci.yml
@@ -181,6 +181,10 @@ issues:
       linters:
         - errcheck
 
+    - text: "don't use an underscore"
+      linters:
+        - golint
+
   # Independently from option `exclude` we use default exclude patterns,
   # it can be disabled by this option. To list all
   # excluded by default patterns execute `golangci-lint run --help`.
