fix unstable test as workload changed by reconcile
Signed-off-by: 天元 <jianbo.sjb@alibaba-inc.com>

--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -13,7 +13,7 @@ defaults:
     working-directory: ./dashboard
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
         node-version: [10.x]
