Update description field for WorkloadDefinition/TraitDefinition
1) make it consisitent in definitions and refrecen docs
2) prepare for auto-generation of reference docs

--- a/charts/vela-core/templates/defwithtemplate/autoscale.yaml
+++ b/charts/vela-core/templates/defwithtemplate/autoscale.yaml
@@ -3,7 +3,7 @@ kind: TraitDefinition
 metadata:
   name: autoscale
   annotations:
-    definition.oam.dev/description: "Automatically scale the app following certain triggers or metrics"
+    definition.oam.dev/description: "`Autoscale` is used to automatically scales workloads by resource utilization metrics and cron."
 spec:
   appliesToWorkloads:
     - webservice
