--- a/charts/vela-core/templates/defwithtemplate/rollout.yaml
+++ b/charts/vela-core/templates/defwithtemplate/rollout.yaml
@@ -3,7 +3,7 @@ kind: TraitDefinition
 metadata:
   name: rollout
   annotations:
-    definition.oam.dev/description: "Configure canary deployment strategy to release the app"
+    definition.oam.dev/description: "`Rollout` is used to configure Canary deployment strategy for your application."
 spec:
   appliesToWorkloads:
     - webservice
@@ -41,11 +41,12 @@ spec:
       	}
       }
       parameter: {
-      	// +usage=total replicas of the workload
+      	// +usage=Total replicas of the workload
       	replicas: *2 | int
       	// +alias=step-weight
-      	// +usage=weight percent of every step in rolling update
+      	// +usage=Weight percent of every step in rolling update
       	stepWeight: *50 | int
-      	interval:   *"30s" | string
+      	// +usage=Schedule interval time
+      	interval: *"30s" | string
       }
       
