--- a/charts/vela-core/templates/defwithtemplate/metrics.yaml
+++ b/charts/vela-core/templates/defwithtemplate/metrics.yaml
@@ -3,7 +3,7 @@ kind: TraitDefinition
 metadata:
   name: metrics
   annotations:
-    definition.oam.dev/description: "Configure metrics targets to be monitored for the app"
+    definition.oam.dev/description: "`Metrics` is used to configure monitoring metrics for your service."
 spec:
   appliesToWorkloads:
     - webservice
@@ -22,16 +22,17 @@ spec:
       	}
       }
       parameter: {
-      	// +usage=format of the metrics, default as prometheus
+      	// +usage=Format of the metrics, default as prometheus
       	// +short=f
       	format: *"prometheus" | string
-      	// +usage= the metrics path of the service
-      	path:    *"/metrics" | string
+      	// +usage=The metrics path of the service
+      	path: *"/metrics" | string
+      	// +usage=The way to retrieve data which can take the values `http` or `https`
       	scheme:  *"http" | string
       	enabled: *true | bool
-      	// +usage= the port for metrics, will discovery automatically by default
+      	// +usage=The port for metrics, will discovery automatically by default
       	port: *0 | >=1024 & <=65535 & int
-      	// +usage= the label selector for the pods, will discovery automatically by default
+      	// +usage=The label selector for the pods, will discovery automatically by default
       	selector?: [string]: string
       }
       
