--- a/charts/vela-core/templates/defwithtemplate/task.yaml
+++ b/charts/vela-core/templates/defwithtemplate/task.yaml
@@ -3,7 +3,7 @@ kind: WorkloadDefinition
 metadata:
   name: task
   annotations:
-    definition.oam.dev/description: "One-off task to run a piece of code or script to completion"
+    definition.oam.dev/description: "`Task` is a workload type to describe jobs that run code or a script to completion."
 spec:
   definitionRef:
     name: jobs
@@ -36,6 +36,7 @@ spec:
       	// +short=i
       	image: string
       
+      	// +usage=Commands to run in the container
       	cmd?: [...string]
       }
       
