--- a/charts/vela-core/templates/defwithtemplate/worker.yaml
+++ b/charts/vela-core/templates/defwithtemplate/worker.yaml
@@ -3,7 +3,7 @@ kind: WorkloadDefinition
 metadata:
   name: worker
   annotations:
-    definition.oam.dev/description: "Long-running scalable backend worker without network endpoint"
+    definition.oam.dev/description: "`Worker` is a workload type to describe long-running, scalable, containerized services that running at backend. They do NOT have network endpoint to receive external network traffic."
 spec:
   definitionRef:
     name: deployments.apps
@@ -44,7 +44,7 @@ spec:
       	// +usage=Which image would you like to use for your service
       	// +short=i
       	image: string
-      
+      	// +usage=Commands to run in the container
       	cmd?: [...string]
       }
       
