Support disable installation of builtin capabilities
Added vela core bootstrap flag `--enable-caps` to support no
installation for builtin capabiliteis

Feature #658

--- a/charts/vela-core/templates/kubevela-controller.yaml
+++ b/charts/vela-core/templates/kubevela-controller.yaml
@@ -112,6 +112,7 @@ spec:
             - "--webhook-port={{ .Values.webhookService.port }}"
             - "--webhook-cert-dir={{ .Values.certificate.mountPath }}"
             - "--health-addr=:{{ .Values.healthCheck.port }}"
+            - "--enable-cap={{ .Values.enableCaps }}"
           {{ end }}
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
           imagePullPolicy: {{ quote .Values.image.pullPolicy }}
