revert flag to "disable-cpas"
Co-authored-by: Jianbo Sun <wonderflow.sun@gmail.com>

--- a/charts/vela-core/values.yaml
+++ b/charts/vela-core/values.yaml
@@ -4,8 +4,8 @@
 
 replicaCount: 1
 useWebhook: true
-# By default, enable all builtin capabilities
-enableCaps: all
+# By default, don't disable any builtin capabilities
+disableCaps: ""
 image:
   repository: oamdev/vela-core
   tag: latest
