Put error as return for sub-functions and update description for definitions

--- a/hack/vela-templates/definitions/autoscale.yaml
+++ b/hack/vela-templates/definitions/autoscale.yaml
@@ -3,7 +3,7 @@ kind: TraitDefinition
 metadata:
   name: autoscale
   annotations:
-    definition.oam.dev/description: "`Autoscale` is used to automatically scales workloads by resource utilization metrics and cron."
+    definition.oam.dev/description: "`Autoscale` is used to automatically scale workloads by resource utilization metrics or cron triggers."
 spec:
   appliesToWorkloads:
     - webservice
