--- a/hack/vela-templates/definitions/manualscale.yaml
+++ b/hack/vela-templates/definitions/manualscale.yaml
@@ -2,7 +2,7 @@ apiVersion: core.oam.dev/v1alpha2
 kind: TraitDefinition
 metadata:
   annotations:
-    definition.oam.dev/description: "`Scaler` is used to configure replicas to your service."
+    definition.oam.dev/description: "`Scaler` is used to configure replicas for your service."
   name: scaler
 spec:
   appliesToWorkloads:
