--- a/charts/vela-core/crds/core.oam.dev_applications.yaml
+++ b/charts/vela-core/crds/core.oam.dev_applications.yaml
@@ -64,7 +64,7 @@ spec:
                   type: object
                 type: array
               status:
-                description: RenderStatus is Application Render Status
+                description: ApplicationPhase is a label for the condition of a application at the current time
                 type: string
             type: object
         type: object
