--- a/charts/vela-core/values.yaml
+++ b/charts/vela-core/values.yaml
@@ -4,6 +4,8 @@
 
 replicaCount: 1
 useWebhook: true
+# By default, don't disable any builtin capabilities
+disableCaps: ""
 image:
   repository: oamdev/vela-core
   tag: latest
