--- a/hack/vela-templates/definitions/task.yaml
+++ b/hack/vela-templates/definitions/task.yaml
@@ -6,6 +6,6 @@ metadata:
     definition.oam.dev/description: "`Task` is a workload type to describe jobs that run code or a script to completion."
 spec:
   definitionRef:
-    name: jobs
+    name: jobs.batch
   extension:
     template: |
