--- a/charts/vela-core/templates/defwithtemplate/task.yaml
+++ b/charts/vela-core/templates/defwithtemplate/task.yaml
@@ -16,6 +16,7 @@ spec:
       		parallelism: parameter.count
       		completions: parameter.count
       		template: spec: {
+                        restartPolicy: parameter.policy
       			containers: [{
       				name:  context.name
       				image: parameter.image
@@ -36,6 +37,8 @@ spec:
       	// +short=i
       	image: string
       
+        // +usage=Define job restartpolicy policy, the value should be Never or OnFailur,,is not Always
+        policy: *"Never"|string
       	// +usage=Commands to run in the container
       	cmd?: [...string]
       }
