--- a/charts/vela-core/crds/core.oam.dev_components.yaml
+++ b/charts/vela-core/crds/core.oam.dev_components.yaml
@@ -67,13 +67,18 @@ spec:
                   - name
                   type: object
                 type: array
+              settings:
+                description: Settings specify detail configurations of this component according to the spec defined in WorkloadDefinition template. The 'settings' field along with 'type' field is mutually exclusive with the 'workload' field.
+                type: object
+                x-kubernetes-preserve-unknown-fields: true
+              type:
+                description: Type specify a workload type for this component. Workload type is defined by OAM WorkloadDefinition. If type used, the component properties should write in settings field. The 'type' field along with 'settings' field is mutually exclusive with the 'workload' field.
+                type: string
               workload:
-                description: A Workload that will be created for each ApplicationConfiguration that includes this Component. Workload is an instance of a workloadDefinition. We either use the GVK info or a special "type" field in the workload to associate the content of the workload with its workloadDefinition
+                description: A Workload that will be created for each ApplicationConfiguration that includes this Component. Workload is an instance of a workloadDefinition. We either use the GVK info or a special "type" field in the workload to associate the content of the workload with its workloadDefinition. The 'workload' field is mutually exclusive with the 'type' and 'settings' field.
                 type: object
                 x-kubernetes-embedded-resource: true
                 x-kubernetes-preserve-unknown-fields: true
-            required:
-            - workload
             type: object
           status:
             description: A ComponentStatus represents the observed state of a Component.
