Update the parameter policy to  restartPolicy

--- a/charts/vela-core/templates/defwithtemplate/task.yaml
+++ b/charts/vela-core/templates/defwithtemplate/task.yaml
@@ -16,7 +16,7 @@ spec:
       		parallelism: parameter.count
       		completions: parameter.count
       		template: spec: {
-      			restartPolicy: parameter.policy
+      			restartPolicy: parameter.restartPolicy
       			containers: [{
       				name:  context.name
       				image: parameter.image
@@ -38,7 +38,7 @@ spec:
       	image: string
       
       	// +usage=Define job restart policy, the value should be Never or OnFailure. By default, it's Never.
-      	policy: *"Never" | string
+      	restartPolicy: *"Never" | string
       
       	// +usage=Commands to run in the container
       	cmd?: [...string]
