--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -97,10 +97,17 @@ jobs:
       - name: Run Make Manager
         run: make manager
 
-      - name: Run e2e tests
+      - name: Prepare for e2e tests
         run: |
           make e2e-cleanup
           make e2e-setup
+
+      - name: Wait for e2e preparation ready
+        run: |
+          timeout 60 bash -c 'while [[ "$(curl -s -o /dev/null -w ''%{http_code}'' localhost:38081/api/workloads)" != "200" ]]; do sleep 5; done' || false
+
+      - name: Run e2e tests
+        run: |
           make e2e-api-test
           make e2e-test
 
