realize context capabilities for application

--- a/config/samples/vela-server/application-sample.yaml
+++ b/config/samples/vela-server/application-sample.yaml
@@ -12,3 +12,9 @@ spec:
       - "1000"
       scaler:
         replicas: 10
+      sidercar:
+        name: "sidecar-test"
+        image: "nginx"
+      service:
+        http:
+          server: 80
