--- a/charts/vela-core/templates/defwithtemplate/task.yaml
+++ b/charts/vela-core/templates/defwithtemplate/task.yaml
@@ -16,6 +16,7 @@ spec:
       		parallelism: parameter.count
       		completions: parameter.count
       		template: spec: {
+      			restartPolicy: parameter.restart
       			containers: [{
       				name:  context.name
       				image: parameter.image
@@ -35,6 +36,9 @@ spec:
       	// +usage=Which image would you like to use for your service
       	// +short=i
       	image: string
+      
+      	// +usage=Define the job restart policy, the value can only be Never or OnFailure. By default, it's Never.
+      	restart: *"Never" | string
       
       	// +usage=Commands to run in the container
       	cmd?: [...string]
