--- a/.golangci.yml
+++ b/.golangci.yml
@@ -103,6 +103,10 @@ linters-settings:
       rangeValCopy:
         sizeThreshold: 32
 
+  makezero:
+    # Allow only slices initialized with a length of zero. Default is false.
+    always: false
+
 linters:
   enable:
     - megacheck
