change the name of rds crd

--- a/docs/examples/kubecondemo/script/def_db.yaml
+++ b/docs/examples/kubecondemo/script/def_db.yaml
@@ -6,7 +6,7 @@ metadata:
     definition.oam.dev/description: "RDS on Ali Cloud"
 spec:
   definitionRef:
-    name: rds.apps
+    name: rdsinstances.database.alibaba.crossplane.io
   extension:
     template: |
       output: {
