Generate restful api based on Swagger
As OpenAPI has to be quickly developped to support front-end developement, so
did the restufl api docs. Based on swagger, generate the docs automatically

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,9 @@ dashboard/package-lock.json
 dashboard/src/.umi/
 package-lock.json
 dashboard/src/.umi-production/
+
+# Swagger: generate Restful API
+pkg/server/.swagger-codegen-ignore
+pkg/server/.swagger-codegen/
+pkg/server/package.json
+pkg/server/docs/index.html
