--- a/config/samples/vela-server/template.yaml
+++ b/config/samples/vela-server/template.yaml
@@ -58,19 +58,76 @@ spec:
   appliesToWorkloads:
     - webservice
     - worker
-  definitionRef:
-    name: manualscalertraits.core.oam.dev
-  workloadRefPath: spec.workloadRef
   extension:
     template: |-
-      output: {
-      	apiVersion: "core.oam.dev/v1alpha2"
-      	kind:       "ManualScalerTrait"
-      	spec: {
-      		replicaCount: parameter.replicas
-      	}
+      patch: {
+         spec: replicas: parameter.replicas
       }
       parameter: {
       	//+short=r
       	replicas: *1 | int
       }
+---
+apiVersion: core.oam.dev/v1alpha2
+kind: TraitDefinition
+metadata:
+  annotations:
+    definition.oam.dev/description: "add sidecar to the app"
+  name: sidecar
+spec:
+  appliesToWorkloads:
+    - webservice
+    - worker
+  extension:
+    template: |-
+      _containers: context.input.spec.template.spec.containers+[parameter]
+      patch: {
+         spec: template: spec: containers: _containers
+      }
+      parameter: {
+         name: string
+         image: string
+         command?: [...string]
+      }
+---
+apiVersion: core.oam.dev/v1alpha2
+kind: TraitDefinition
+metadata:
+  annotations:
+    definition.oam.dev/description: "service the app"
+  name: service
+spec:
+  appliesToWorkloads:
+    - webservice
+    - worker
+  definitionRef:
+    name: services
+  extension:
+    template: |-
+      patch: {spec: template: metadata: labels: app: context.name}
+      output: {
+        apiVersion: "v1"
+        kind: "Service"
+        metadata: name: context.name
+        spec: {
+          selector:  app: context.name
+          ports: [
+            for k, v in parameter.http {
+              port: v
+              targetPort: v
+            }
+          ]
+        }
+      }
+      parameter: {
+        http: [string]: int
+      }
+---
+apiVersion: core.oam.dev/v1alpha2
+kind: TraitDefinition
+metadata:
+  name: services
+  namespace: default
+spec:
+  definitionRef:
+    name: services
