--- a/config/samples/vela-server/template.yaml
+++ b/config/samples/vela-server/template.yaml
@@ -80,9 +80,9 @@ spec:
     - worker
   extension:
     template: |-
-      _containers: context.input.spec.template.spec.containers+[parameter]
       patch: {
-         spec: template: spec: containers: _containers
+         // +patchKey=name
+         spec: template: spec: containers: [parameter]
       }
       parameter: {
          name: string
