--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -49,9 +49,10 @@
     "@ant-design/pro-descriptions": "^1.0.19",
     "@ant-design/pro-form": "^1.9.0",
     "@ant-design/pro-layout": "^6.6.1",
+    "@ant-design/pro-list": "^1.1.12",
     "@ant-design/pro-table": "^2.15.1",
     "@umijs/route-utils": "^1.0.33",
-    "antd": "^4.8.6",
+    "antd": "^4.9.4",
     "classnames": "^2.2.6",
     "dayjs": "^1.9.7",
     "lodash": "^4.17.11",
