Generate restful api based on Swagger (#765)
* Generate restful api based on Swagger

As OpenAPI has to be quickly developped to support front-end developement, so
did the restufl api docs. Based on swagger, generate the docs automatically

* fix conflicts and add application list annotation

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,6 @@ dashboard/package-lock.json
 dashboard/src/.umi/
 package-lock.json
 dashboard/src/.umi-production/
+
+# Swagger: generate Restful API
+pkg/server/docs/index.html
