1.add dashboard lint check 2.remove unused ref

--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -25,5 +25,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: yarn
+    - run: yarn lint
     - run: yarn build
 
