set provider can be empty

--- a/charts/vela-core/templates/defwithtemplate/route.yaml
+++ b/charts/vela-core/templates/defwithtemplate/route.yaml
@@ -41,6 +41,6 @@ spec:
       		path:          string
       		rewriteTarget: *"" | string
       	}]
-      	provider: *"" | string
+      	provider?: string
       }
       
