refactor and add scope to application

--- a/charts/vela-core/templates/definitions/healthscopes.yaml
+++ b/charts/vela-core/templates/definitions/healthscopes.yaml
@@ -7,4 +7,4 @@ spec:
   workloadRefsPath: spec.workloadRefs
   allowComponentOverlap: true
   definitionRef:
-    name: healthscope.core.oam.dev
+    name: healthscopes.core.oam.dev
