--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_applications.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_applications.yaml
@@ -38,6 +38,10 @@ spec:
                 properties:
                   name:
                     type: string
+                  scopes:
+                    description: scopes in ApplicationComponent defines the component level scopes the format is <key:value> pairs, the key represents type of `ScopeDefinition` while the value represent the name of scope instance.
+                    type: object
+                    
                   settings:
                     type: object
                     
