--- a/config/samples/application/application-sample.yaml
+++ b/config/samples/application/application-sample.yaml
@@ -15,7 +15,7 @@ spec:
         - name: scaler
           properties:
             replicas: 10
-        - name: sidercar
+        - name: sidecar
           properties:
             name: "sidecar-test"
             image: "nginx"
